--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,12 +25,13 @@ services:
       image: mysql:8.0
       volumes:
         - mysql_data:/var/lib/mysql
+        # mysqlサーバー起動時に下記フォルダ内のsqlを自動実行することで、sharetechスキーマを事前に作成する
         - ./initdb.d:/docker-entrypoint-initdb.d
       environment:
             - MYSQL_ROOT_PASSWORD=root123A!
             - MYSQL_USER=django
             - MYSQL_PASSWORD=django123A!
-            - MYSQL_DB=sharetech
+      # docker-compose実行ユーザーに、volumesで指定したコンテナ内ディレクトリ捜査権限を与える必要がある     
       command: bash -c 'usermod -o -u $LINUX_MYSQL_UID mysql; groupmod -o -g $LINUX_MYSQL_GID mysql; chown -R mysql:root /var/run/mysqld/ /var/log/mysql/ /var/lib/mysql/; /entrypoint.sh mysqld --user=mysql --console'
 volumes:
   mysql_data:
