--- a/mysql_cnf/my.cnf
+++ b/mysql_cnf/my.cnf
@@ -1,5 +1,6 @@
 [mysqld]
 character-set-server=utf8mb4
+character-set-client=utf8mb4
 collation-server=utf8mb4_general_ci
 explicit-defaults-for-timestamp=1
 general-log=1
