add elastic setting for Prod env

--- a/sharetech/.ebextensions/django.config
+++ b/sharetech/.ebextensions/django.config
@@ -14,6 +14,9 @@ option_settings:
   - namespace: aws:elasticbeanstalk:application:environment
     option_name: SECRET_KEY
     value: django-insecure-an)d383q66a%4doo4(t1_iut-xcapi87m+rph*na-v@un=d3uu
+  - namespace: aws:elasticbeanstalk:application:environment
+    option_name: EB_ENV_DEBUG
+    value: True
 container_commands:
   01_migrate:
     command: "source /var/app/venv/*/bin/activate && python manage.py migrate --noinput"
