--- a/sharetech/.ebextensions/django.config
+++ b/sharetech/.ebextensions/django.config
@@ -17,6 +17,9 @@ option_settings:
   - namespace: aws:elasticbeanstalk:application:environment
     option_name: EB_ENV_DEBUG
     value: True
+  - namespace: aws:elasticbeanstalk:application:environment
+    option_name: EXECUTION_ENVIRONMENT
+    value: prd
 container_commands:
   01_migrate:
     command: "source /var/app/venv/*/bin/activate && python manage.py migrate --noinput"
