temp lp deploy setting

--- a/sharetech/.ebextensions/django.config
+++ b/sharetech/.ebextensions/django.config
@@ -16,7 +16,7 @@ option_settings:
     value: django-insecure-an)d383q66a%4doo4(t1_iut-xcapi87m+rph*na-v@un=d3uu
   - namespace: aws:elasticbeanstalk:application:environment
     option_name: EB_ENV_DEBUG
-    value: True
+    value: False
   - namespace: aws:elasticbeanstalk:application:environment
     option_name: EXECUTION_ENVIRONMENT
     value: prd
