media and static file on s3

--- a/sharetech/.ebextensions/django.config
+++ b/sharetech/.ebextensions/django.config
@@ -16,11 +16,14 @@ option_settings:
     value: django-insecure-an)d383q66a%4doo4(t1_iut-xcapi87m+rph*na-v@un=d3uu
   - namespace: aws:elasticbeanstalk:application:environment
     option_name: EB_ENV_DEBUG
-    value: True
+    value: False
   - namespace: aws:elasticbeanstalk:application:environment
     option_name: EXECUTION_ENVIRONMENT
     value: prd
 container_commands:
+  00_collectstatic:
+    command: "source /var/app/venv/*/bin/activate && python manage.py collectstatic --noinput"
+    leader_only: true
   01_migrate:
     command: "source /var/app/venv/*/bin/activate && python manage.py migrate --noinput"
     leader_only: true
