ログ出力用設定

--- a/sharetech/Dockerfile
+++ b/sharetech/Dockerfile
@@ -32,6 +32,7 @@ RUN bash ~/.bash_profile
 RUN pyenv -v
 RUN pyenv install 3.8.2
 RUN pyenv global 3.8.2
+RUN mkdir -p /var/log/app/sharetech/
 
 # migration実行
 ENTRYPOINT ["/usr/src/sharetech/entrypoint.sh"]
