--- a/sharetech/.ebextensions/django.config
+++ b/sharetech/.ebextensions/django.config
@@ -20,6 +20,12 @@ option_settings:
   - namespace: aws:elasticbeanstalk:application:environment
     option_name: EXECUTION_ENVIRONMENT
     value: prd
+  - namespace: aws:elasticbeanstalk:application:environment
+    option_name: EMAIL_HOST
+    value: sharetech.info@share-tech.jp
+  - namespace: aws:elasticbeanstalk:application:environment
+    option_name: EMAIL_APP_PASS
+    value: utxlupkcmuwrnskt
 container_commands:
   00_collectstatic:
     command: "source /var/app/venv/*/bin/activate && python manage.py collectstatic --noinput"
